# CUDA-CMake-Minimal-Template

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: DearImGUI.hpp  image.hpp
include/00/: functional.cuh
include/01/: functional.cuh
include/common/: GUI.hpp  OpenGL.hpp  image.hpp
scripts/: run_00.sh  run_01.sh  run_02.sh
src/: CMakeLists.txt
src/00/: CMakeLists.txt  functional.cu  main.cpp
src/01/: CMakeLists.txt  functional.cu  main.cpp
src/02/: CMakeLists.txt  functional.cu  main.cpp
src/common/: CMakeLists.txt  GUI.cpp  image.cpp
